3.3/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 80
      targetPort: 80
