3.3/service-cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: cache
      protocol: TCP
      port: 80
      targetPort: 80
