3.3/np-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-deny-all
  namespace: app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
